# classfity

./: CMakeLists.txt  Classificate.hpp  README.md  test.cpp  train.cpp
